versioned_docs/version-3.1.0/HRMS Features/Leave.md
---
id: p1-3-leavemodule
sidebar_label: Leave 
title: Leave 
---

### Apply Leave - Leave Application Process 

- Go to the leave module in the HRMS application

- Select the **Apply Leave** option 

- The leave application form will open

- Select the type of leave you wish to apply for 

- Enter the **Leave From** and **Leave To** dates 

- Choose the appropriate leave type from the options provided

- A prompt will appear asking if the leave is for a whole day or half day

- Select your preferred option

- Provide the reason for your leave in the designated field 

- The duty resuming date will auto-fill based on your leave dates

- Click on the **Apply Leave** button to submit your request

- A confirmation message will appear stating, **You have successfully applied for a leave and your current leave status is PENDING.** 

- Click **Okay** to acknowledge the message

- An email notification regarding your leave application will be sent

- The leave application will be sent to the reporting person for approval 

- The leave balance will be updated to reflect your new leave status 

**Workflow of Leave Application Process**

<img src="/img/workflow/leaveapplication.jpg"  width="800px" alt="leaveapplication"/>


### Leave history 

To view your leave history details, select the **Leave History** button from the Leave menu.  The Leave History section provides an overview of all leave details for the current year. This includes a detailed record of each leave request, such as the type of leave, the dates applied for, the status of the application, and any approvals or rejections. Users can review their complete leave history for the year, allowing them to track their leave usage and manage their leave balance effectively. The sorting feature by date and status enables users to easily view their history.

### Monthly Leave History 

The Monthly Leave section gives a clear summary of all leave taken in a specific month. It shows the total days used and breaks it down by leave type, such as **Earned Leave (EL), Casual Leave (CL), Loss of Pay (LOP), Sick Leave (SL), and Short Leave (SHL)**. Users can see the leave dates and track their monthly usage, helping them manage their leave balance and plan better. 

### Annual Leave Roster 

The Annual Leave Roster helps users plan their entire year’s leave. This overview allows users to manage their leave effectively, track their usage, and plan their leave throughout the year. To add leave click on Annual Leave Roster. The annual leave roster form will appear. Enter the Expected Leave From and Expected Leave To dates, then click Save.

**Users can effortlessly navigate between pages at any time**.

