versioned_docs/version-3.1.1/HRMS Features/Leave.md
---
id: p1-3-leavemodule
sidebar_label: Leave 
title: Leave 
---

### Apply Leave - Leave Application Process 

- Go to the leave module in the HRMS application

- Select the **Apply Leave** option 

- The leave application form will open

- Select the type of leave you wish to apply for 

- Enter the **Leave From** and **Leave To** dates 

- Choose the appropriate leave type from the options provided

- A prompt will appear asking if the leave is for a whole day or half day

- Select your preferred option

- Provide the reason for your leave in the designated field 

- The duty resuming date will auto-fill based on your leave dates

- Click on the **Apply Leave** button to submit your request

- A confirmation message will appear stating, **You have successfully applied for a leave and your current leave status is PENDING.** 

- Click **Okay** to acknowledge the message

- An email notification regarding your leave application will be sent

- The leave application will be sent to the reporting person for approval 

- The leave balance will be updated to reflect your new leave status 

**Workflow of Leave Application Process**

<img src="/img/workflow/leaveapplication.jpg"  width="800px" alt="leaveapplication"/>


### Leave history 

To view your leave history details, select the **Leave History** button from the Leave menu.  The Leave History section provides an overview of all leave details for the current year. This includes a detailed record of each leave request, such as the type of leave, the dates applied for, the status of the application, and any approvals or rejections. Users can review their complete leave history for the year, allowing them to track their leave usage and manage their leave balance effectively. The sorting feature by date and status enables users to easily view their history.

### Monthly Leave History 

The Monthly Leave section gives a clear summary of all leave taken in a specific month. It shows the total days used and breaks it down by leave type, such as **Earned Leave (EL), Casual Leave (CL), Loss of Pay (LOP), Sick Leave (SL), and Short Leave (SHL)**. Users can see the leave dates and track their monthly usage, helping them manage their leave balance and plan better. 

### Annual Leave Roster 

The Annual Leave Roster helps users plan their entire year’s leave. This overview allows users to manage their leave effectively, track their usage, and plan their leave throughout the year. To add leave click on Annual Leave Roster. The annual leave roster form will appear. Enter the Expected Leave From and Expected Leave To dates, then click Save.

**Users can effortlessly navigate between pages at any time**.

## Casual Leave Pro-Rata Validation 

Casual Leave is now accrued at 0.5 days per month (6 days per year). The system enforces pro-rata-based validations to prevent employees from applying beyond their accrued balance, with real-time balance visibility. 

**Overview** 

- Casual Leave is accrued at 0.5 days per month (total 6 days per year).  
- Employees can only apply for CL based on the leave balance accrued up to the current month. 
- The system performs real-time validation to prevent excess leave requests.

**How It Works** 

- Each month, 0.5 CL is added to the employee’s leave balance.  

The system calculates:  

- Accrued leave till date  

- Leave already used or pending  

- Available balance  

- Employees can apply only within the available balance. 

**Validation During Leave Application** 

When an employee applies for Casual Leave exceeding their eligible balance:  

The system blocks the request  

A “Not Eligible” popup message is displayed 

**Popup Message Details** 

The popup provides clear information, including: 

- Number of days requested  

- Accrued leave till the current month  

- Leave already used or pending  

- Current available balance  

- Instruction to reapply within the eligible limit 

**Real-Time Balance Visibility** 

Employees can view their leave balance summary on the same page.  

This helps in:  

- Planning leave effectively  

- Avoiding invalid requests  

- Understanding eligibility instantly 

## General Notes (Policy) in Leave  

The General Notes (Policy) feature provides employees with important leave guidelines directly within the application. This ensures users are aware of company policies at the time of performing actions, reducing errors, and improving compliance. 

**How to Access**

- Log in to the HRMS Dashboard  

- Navigate to the Leave module  

- Click on Apply Leave  

- On the Leave form, click the Info icon (located at the top of the form)  

- A pop-up window will open displaying detailed leave guidelines and policies

## Cancel Approved Leave 

The Cancel Approved Leave feature allows HR to cancel leave requests that have already been approved. This provides flexibility when employees need to withdraw leave due to changing circumstances, while ensuring accurate leave records and workforce planning. 

**When is this Used?** 

- An employee has applied for leave  

- The leave has been approved by the Reporting Person (RP)  

- The employee requests cancellation of the approved leave  

- In such cases, HR can cancel the leave on behalf of the employee. 


When the HR cancels the leave, selected leave days are successfully canceled. Leave balances are automatically updated  

The cancellation is reflected in:  

- Employee leave records  

- Reporting Person (RP) view 

**Notifications** 

Email notification is sent to:  

- The Employee  

- The Reporting Person (RP) 

:::note Notes

- Only HR users have permission to cancel approved leave.  
- Ensure proper validation before cancellation to avoid discrepancies.

:::

 

 

 

 

